--- a/.github/workflows/test-platforms.yml
+++ b/.github/workflows/test-platforms.yml
@@ -109,7 +109,7 @@ jobs:
           path: libre2-core/target/
 
       - name: Run unit tests
-        run: mvn test -B
+        run: mvn test -pl libre2-core -B
 
   # ============================================================================
   # Stage 3: Integration Tests (all platforms)
@@ -146,7 +146,7 @@ jobs:
           unzip -l libre2-core/target/libre2-core-1.0.0.jar | grep "darwin-x86_64/libre2.dylib"
 
       - name: Run integration tests (multi-module)
-        run: mvn integration-test -B
+        run: mvn failsafe:integration-test failsafe:verify -pl libre2-core -B
 
       - name: Verify platform detection
         run: |
@@ -181,7 +181,7 @@ jobs:
           unzip -l libre2-core/target/libre2-core-1.0.0.jar | grep "darwin-aarch64/libre2.dylib"
 
       - name: Run integration tests with JAR
-        run: mvn integration-test -B
+        run: mvn failsafe:integration-test failsafe:verify -pl libre2-core -B
 
       - name: Verify platform detection
         run: |
@@ -240,7 +240,7 @@ jobs:
               unzip -l libre2-core/target/libre2-core-1.0.0.jar | grep 'linux-x86_64/libre2.so'
 
               # Run integration tests
-              ./mvnw integration-test -B
+              ./mvnw failsafe:integration-test failsafe:verify -pl libre2-core -B
 
               echo '✅ Integration tests passed on Ubuntu 20.04 linux-x86_64'
             "
@@ -273,7 +273,7 @@ jobs:
           unzip -l libre2-core/target/libre2-core-1.0.0.jar | grep "linux-x86_64/libre2.so"
 
       - name: Run integration tests with JAR
-        run: mvn integration-test -B
+        run: mvn failsafe:integration-test failsafe:verify -pl libre2-core -B
 
       - name: Verify platform detection
         run: |
@@ -322,7 +322,7 @@ jobs:
               unzip -l libre2-core/target/libre2-core-1.0.0.jar | grep 'linux-x86_64/libre2.so'
 
               # Run integration tests
-              ./mvnw integration-test -B
+              ./mvnw failsafe:integration-test failsafe:verify -pl libre2-core -B
 
               echo '✅ Integration tests passed on Ubuntu 24.04 linux-x86_64'
             "
@@ -377,7 +377,7 @@ jobs:
               unzip -l libre2-core/target/libre2-core-1.0.0.jar | grep 'linux-x86_64/libre2.so'
 
               # Run integration tests
-              ./mvnw integration-test -B
+              ./mvnw failsafe:integration-test failsafe:verify -pl libre2-core -B
 
               echo '✅ Integration tests passed on Rocky Linux 8 x86_64'
             "
@@ -429,7 +429,7 @@ jobs:
               unzip -l libre2-core/target/libre2-core-1.0.0.jar | grep 'linux-x86_64/libre2.so'
 
               # Run integration tests
-              ./mvnw integration-test -B
+              ./mvnw failsafe:integration-test failsafe:verify -pl libre2-core -B
 
               echo '✅ Integration tests passed on Rocky Linux 9 x86_64'
             "
@@ -487,7 +487,7 @@ jobs:
               unzip -l libre2-core/target/libre2-core-1.0.0.jar | grep 'linux-aarch64/libre2.so'
 
               # Run integration tests
-              ./mvnw integration-test -B
+              ./mvnw failsafe:integration-test failsafe:verify -pl libre2-core -B
 
               echo '✅ Integration tests passed on Ubuntu 22.04 linux-aarch64'
             "
@@ -549,7 +549,7 @@ jobs:
               unzip -l libre2-core/target/libre2-core-1.0.0.jar | grep 'linux-aarch64/libre2.so'
 
               # Run integration tests
-              ./mvnw integration-test -B
+              ./mvnw failsafe:integration-test failsafe:verify -pl libre2-core -B
 
               echo '✅ Integration tests passed on Ubuntu 24.04 linux-aarch64'
             "
@@ -614,7 +614,7 @@ jobs:
               unzip -l libre2-core/target/libre2-core-1.0.0.jar | grep 'linux-aarch64/libre2.so'
 
               # Run integration tests
-              ./mvnw integration-test -B
+              ./mvnw failsafe:integration-test failsafe:verify -pl libre2-core -B
 
               echo '✅ Integration tests passed on Rocky Linux 9 aarch64'
             "
