Add JaCoCo code coverage with 67% minimum threshold
Configuration:
- JaCoCo Maven Plugin 0.8.11
- Measures coverage from BOTH unit tests and integration tests
- Merges jacoco.exec + jacoco-it.exec → jacoco-merged.exec
- Generates combined HTML report in target/site/jacoco/
- Enforces minimum 67% line coverage (current baseline)

Current Coverage (Combined Unit + Integration):
- Line Coverage: 67% (1,676 lines total)
- Instruction Coverage: 67%
- Branch Coverage: 53%

Coverage by Package:
- com.axonops.libre2.api: 65% (Pattern, Matcher, RE2, MatchResult)
- com.axonops.libre2.cache: 67% (PatternCache, IdleEvictionTask, etc.)
- com.axonops.libre2.jni: 70% (RE2Native, IRE2Native, RE2LibraryLoader)
- com.axonops.libre2.metrics: 85% (Metrics adapters)
- com.axonops.libre2.dropwizard: 80% (RE2MetricsConfig)
- com.axonops.libre2.util: 68% (Utilities)

Build fails if coverage drops below 67%, preventing regression.

--- a/libre2-core/pom.xml
+++ b/libre2-core/pom.xml
@@ -88,10 +88,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <!-- JVM arguments for DirectBuffer access -->
-                    <argLine>
-                        --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
-                    </argLine>
+                    <!-- JVM arguments for DirectBuffer access + JaCoCo agent -->
+                    <argLine>@{argLine} --add-exports=java.base/sun.nio.ch=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
 
@@ -134,10 +132,8 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>3.1.2</version>
                 <configuration>
-                    <!-- JVM arguments for DirectBuffer access -->
-                    <argLine>
-                        --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
-                    </argLine>
+                    <!-- JVM arguments for DirectBuffer access + JaCoCo agent -->
+                    <argLine>@{argLine} --add-exports=java.base/sun.nio.ch=ALL-UNNAMED</argLine>
                 </configuration>
                 <executions>
                     <execution>
@@ -175,6 +171,86 @@
                         </manifestEntries>
                     </archive>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco.version}</version>
+                <executions>
+                    <!-- Prepare agent for unit tests -->
+                    <execution>
+                        <id>prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+
+                    <!-- Prepare agent for integration tests -->
+                    <execution>
+                        <id>prepare-agent-integration</id>
+                        <goals>
+                            <goal>prepare-agent-integration</goal>
+                        </goals>
+                    </execution>
+
+                    <!-- Merge unit and integration test coverage data -->
+                    <execution>
+                        <id>merge-results</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>merge</goal>
+                        </goals>
+                        <configuration>
+                            <fileSets>
+                                <fileSet>
+                                    <directory>${project.build.directory}</directory>
+                                    <includes>
+                                        <include>jacoco.exec</include>
+                                        <include>jacoco-it.exec</include>
+                                    </includes>
+                                </fileSet>
+                            </fileSets>
+                            <destFile>${project.build.directory}/jacoco-merged.exec</destFile>
+                        </configuration>
+                    </execution>
+
+                    <!-- Generate combined coverage report (unit + integration) -->
+                    <execution>
+                        <id>report</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                        <configuration>
+                            <dataFile>${project.build.directory}/jacoco-merged.exec</dataFile>
+                        </configuration>
+                    </execution>
+
+                    <!-- Enforce minimum coverage threshold -->
+                    <execution>
+                        <id>check</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <configuration>
+                            <dataFile>${project.build.directory}/jacoco-merged.exec</dataFile>
+                            <rules>
+                                <rule>
+                                    <element>BUNDLE</element>
+                                    <limits>
+                                        <limit>
+                                            <counter>LINE</counter>
+                                            <value>COVEREDRATIO</value>
+                                            <minimum>0.67</minimum> <!-- Current: 67%, enforce no regression -->
+                                        </limit>
+                                    </limits>
+                                </rule>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
